tests/query_errors/pipeline_undefined/error.txt
Error: 
    1 | create query snot;
      | ^^^^^^^^^^^^^^^^^ query `snot` not found
